# lmsf

./: .bazelrc  .gitignore  .gitmodules  Cargo.toml  README.md  WORKSPACE  tinfer.bzl
common/: Cargo.toml
common/src/: cuda_ext.rs  ffi.rs  lib.rs  macros.rs  metrics.rs  tensor_ext.rs  tracing.rs  unsafe_tensor.rs
core/: Cargo.toml
core/src/: lib.rs  main.rs.bak
core/src/common/: block.rs  config.rs  mod.rs  output.rs  sampling_params.rs  sequence.rs  tokenizer.rs
core/src/engine/: llm_engine.rs  mod.rs
core/src/model_executor/: input_metadata.rs  mod.rs  sampling_metadata.rs
core/src/model_executor/layers/: attention.rs  cache.rs  layer.rs  linear.rs  mod.rs  registry.rs  rotary_embedding.rs  sampler.rs  vocab_parallel_embedding.rs
core/src/model_executor/layers/quantization/: awq.rs  mod.rs  squeezellm.rs
core/src/model_executor/models/: llama.rs  llama_ext.rs  mod.rs  model.rs  model_factory.rs  template.rs
core/src/model_executor/models/chatglm/: chatglm.rs  config.rs  list.txt  mod.rs
core/src/model_executor/models/gemma/: config.rs  gemma.rs  mod.rs
core/src/model_executor/models/llama/: config.rs  llama.rs  mod.rs  quantized_llama.rs  template.rs
core/src/model_executor/ops/: attention.rs  attn_bias.rs  cache.rs  mod.rs  tensor.rs  test.rs
core/src/model_executor/parallel/: mod.rs  parallel_state.rs
core/src/sched/: block_manager.rs  mod.rs  policy.rs  scheduler.rs
core/src/tensor/: arena.rs  assign.rs  binary.rs  cmp.rs  copy.rs  fill.rs  mod.rs  scatter.rs  test.rs
core/src/worker/: cache_engine.rs  mod.rs  model_worker.rs
entrypoints/: Cargo.toml
entrypoints/src/: main.rs
entrypoints/src/openai/: handle.rs  mod.rs  protocol.rs
example/: Cargo.toml
example/examples/: llm_engine_example.rs  test_tensor.rs
example/src/: lib.rs
tinfer/kernel/: BUILD.bazel  activation_kernels.cu  activation_kernels.h  gpt_kernels.cu  gpt_kernels.h  matrix_vector_multiplication.cu  matrix_vector_multiplication.h  moe_kernels.cu  moe_kernels.h  reduce_kernel_utils.cuh  transpose_int8_kernels.cu  transpose_int8_kernels.h
tinfer/kernel/cutlass_extensions/: BUILD.bazel  compute_occupancy.h  epilogue_helpers.h
tinfer/kernel/cutlass_extensions/gemm/kernel/: default_fpA_intB_traits.h  gemm_moe_problem_visitor.h  gemm_with_epilogue_visitor.h  mixed_gemm_B_layout.h  moe_cutlass_kernel.h
tinfer/kernel/cutlass_extensions/gemm/threadblock/: default_dq_mma.h  default_dq_mma_multistage.h  default_dq_mma_pipelined.h  default_mma.h  default_mma_bf16.h  dq_mma_multistage.h  dq_mma_pipelined.h
tinfer/kernel/cutlass_extensions/gemm/warp/: default_mma_tensor_op.h  mma_tensorop_dequantizer.h
tinfer/kernel/cutlass_kernels/: BUILD.bazel  cutlass_heuristic.cc  cutlass_heuristic.h  cutlass_preprocessors.cc  cutlass_preprocessors.h
tinfer/kernel/cutlass_kernels/fpA_intB_gemm/: fpA_intB_gemm.h  fpA_intB_gemm_bf16_uint4.cu  fpA_intB_gemm_bf16_uint8.cu  fpA_intB_gemm_dummy_stubs.cu  fpA_intB_gemm_fp16_int4.cu  fpA_intB_gemm_fp16_int8.cu  fpA_intB_gemm_template.h
tinfer/kernel/cutlass_kernels/int8_gemm/: int8_gemm.h  int8_gemm_bf16.cu  int8_gemm_fp16.cu  int8_gemm_fp32.cu  int8_gemm_int32.cu  int8_gemm_template.h
tinfer/kernel/cutlass_kernels/moe_gemm/: moe_gemm_kernels.h  moe_gemm_kernels_bf16_bf16.cu  moe_gemm_kernels_bf16_uint4.cu  moe_gemm_kernels_bf16_uint8.cu  moe_gemm_kernels_fp16_fp16.cu  moe_gemm_kernels_fp16_uint4.cu  moe_gemm_kernels_fp16_uint8.cu  moe_gemm_kernels_fp32_fp32.cu  moe_gemm_kernels_template.h
tinfer/kernel/triton/: va.py  x.0d1d2d3.c  x.0d1d2d3.h
tinfer/model/: BUILD.bazel  model.cc  model.h  model_config.cc  model_config.h  model_task.h  model_test.cc  model_weights.cc  model_weights.h  model_weights_test.cc
tinfer/module/: BUILD.bazel  context.cc  context.h  module.cc  module.h  params.cc  params.h
tinfer/module/common/: BUILD.bazel  base_layer.h  dense_weight.h
tinfer/module/ffn/: BUILD.bazel  ffn_layer.cc  ffn_layer.h  ffn_weight.h
tinfer/module/misc/: BUILD.bazel  build_decoder_attention_mask.cc  general_layer_norm.cc  inputs_embedding_lookup_pos_encoding.cc  prepare_inputs.cc  tile_prompt_inputs.cc
tinfer/tensor/: BUILD.bazel  tensor.cc  tensor.h  tensor_keys.h
tinfer/tokenizer/: BUILD.bazel  bert_tokenizer.cc  bert_tokenizer.h  bert_tokenizer_test.cc  sentencepiece_tokenizer.h  sentencepiece_tokenizer_test.cc  tokenizer.cc  tokenizer.h  wordpiece_tokenizer.cc  wordpiece_tokenizer.h
tinfer/utils/: BUILD.bazel  activation_types.h  cleanup.h  cublas_algo_map.cc  cublas_algo_map.h  cublas_wrapper.cc  cublas_wrapper.h  cuda_allocator.h  cuda_type_utils.cuh  cuda_utils.cu  cuda_utils.h  mem_utils.cu  mem_utils.h  regex_split.cc  regex_split.h  string_utils.h  vocab_utils.cc  vocab_utils.h
tops/: Cargo.toml  build.rs
tops/csrc/: CMakeLists.txt
tops/csrc/example/: CMakeLists.txt  test_arrayfire.cc  test_exponential.cc  test_gemm.cc  test_repeat.cc  test_scatter.cc  test_softmax.cc
tops/csrc/tops/: CMakeLists.txt
tops/csrc/tops/arrayfire/: CMakeLists.txt
tops/csrc/tops/arrayfire/c_api/: CMakeLists.txt  cumsum.cc  repeat.cc  sort.cc  topk.cc
tops/csrc/tops/arrayfire/common/: CMakeLists.txt  array.h  binary.h  cuda_ptr.h  dim4.cpp  dim4.h  math.h  mem.h  param.h  thrust_utils.h  transform.h  types.h
tops/csrc/tops/arrayfire/kernel/: config.h  iota.cuh  iota.h  range.cuh  range.h  reorder.cuh  reorder.h  scan_dim.cuh  scan_dim.h  scan_first.cuh  scan_first.h  sort_by_key.h  thrust_sort_by_key.h  thrust_sort_by_key_impl.h  tile.cuh  tile.h  topk.cuh
tops/csrc/tops/arrayfire/ops/: CMakeLists.txt  iota.cu  iota.h  range.cu  range.h  scan.cu  (+9 more)
tops/csrc/tops/c_api/: CMakeLists.txt  async.cc  c_api.cc  c_api.h  exponential.cc
tops/csrc/tops/common/: err_cuda.h  shape.h
tops/csrc/tops/oneflow/: CMakeLists.txt
tops/csrc/tops/tensorrt_llm/: CMakeLists.txt
tops/csrc/tops/torch/: CMakeLists.txt
tops/src/: arange.rs  arrange.rs  binary.rs  common.rs  cublas.rs  cumsum.rs  exponential.rs  lib.rs  masked_fill.rs  random.rs  repeat.rs  rms_norm.rs  scatter.rs  silu.rs  softmax.rs  sort.rs  tensor_ext.rs  topk.rs
(+111 files in other folders)
