[package]
name = "lmsf-common"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = "0.2"
candle-core = { version = "0.3.2" }
half = "2.3.1"

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
glob = "0.3.1"
rayon = "1.7.0"
cmake = "0.1"
num_cpus = "1.15.0"

[features]
default = ["cuda"]
cuda = ["candle-core/cuda"]
