[package]
name = "lmsf-common"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = { workspace = true }
libc = { workspace = true }
candle = { workspace = true }
half = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
metrics = { workspace = true }
metrics-util = { workspace = true }
tokio = { workspace = true }
quanta = { version = "0.12", default-features = false }


[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
glob = "0.3.1"
rayon = "1.7.0"
cmake = "0.1"
num_cpus = "1.15.0"

[features]
default = ["cuda"]
cuda = ["candle/cuda"]
