[package]
name = "lmsf-core"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { workspace = true }
veil = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
metrics = { workspace = true }
candle-core = { workspace = true }
candle-kernels = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
half = { workspace = true }
minijinja = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
# candle-ext = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }

tokenizers = { version = "0.13.4", default-features = false, features = [
    "onig",
] }
num = "0.4"
num-derive = "0.4"
num-traits = "0.2"
paste = "1.0"

vllm = { path = "../vllm" }
tops = { path = "../tops" }
common = { path = "../common", package = "lmsf-common" }
candle-patch = { path = "../candle-patch" }

[features]
default = ["cuda"]
cuda = ["candle-core/cuda"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
