[package]
name = "entrypoints"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { workspace = true }
lmsf-core = { path = "../core", package = "lmsf-core" }
common = { path = "../common", package = "lmsf-common" }
axum = { version = "0.7.4" }
tokio = { version = "1.0", features = ["full"] }
serde = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
async-stream = { workspace = true }
serde_json = { workspace = true }
futures-core = { workspace = true }

[build-dependencies]
glob = "0.3.1"
rayon = "1.7.0"
cmake = "0.1"
num_cpus = "1.15.0"

# [features]
# default = ["cuda"]
