[package]
name = "lmsf-example"
version = "0.1.0"
edition = "2021"


[[example]]
name = "llm_engine_example"


[dependencies]
lmsf-core = { path = "../core", package = "lmsf-core" }
common = { path = "../common", package = "lmsf-common" }
tops = { path = "../tops" }
clap = { workspace = true }
veil = "0.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
anyhow = { workspace = true }
candle-core = { workspace = true }
tokio = { workspace = true }


[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }

[features]
default = ["cuda"]
cuda = ["candle-core/cuda"]
