[package]
name = "tops"
version = "0.1.0"
edition = "2021"


[dependencies]
libc = { workspace = true }
candle = { workspace = true }
candle-nn = { workspace = true }
half = { workspace = true }
common = { path = "../common", package = "lmsf-common" }
# candle-patch = { path = "../candle-patch" }

[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
glob = "0.3.1"
rayon = "1.7.0"
cmake = "0.1"
num_cpus = "1.15.0"
bindgen_cuda = "0.1"

[features]
default = ["cuda"]
cuda = ["candle/cuda"]
