load("@rules_cuda//cuda:defs.bzl", "cuda_library")

package(
    default_visibility = ["//visibility:public"],
)

cuda_library(
    name = "gpt_kernels",
    srcs = ["gpt_kernels.cu"],
    hdrs = [
        "gpt_kernels.h",
    ],
    deps = [
        "//tinfer/log",
    ],
)

cuda_library(
    name = "moe_kernels",
    srcs = ["moe_kernels.cu"],
    hdrs = [
        "moe_kernels.h",
    ],
    deps = [
        "//tinfer/kernel/cutlass_kernels",
        "//tinfer/log",
        "//tinfer/utils:activation_types",
        "//tinfer/utils:cuda_utils",
    ],
)

cuda_library(
    name = "activation_kernels",
    srcs = ["activation_kernels.cu"],
    hdrs = [
        "activation_kernels.h",
    ],
    deps = [
        "//tinfer/log",
        "//tinfer/utils:cuda_utils",
        "//tinfer/utils:mem_utils",
    ],
)

cuda_library(
    name = "kernel_utils",
    hdrs = [
        "int8_utils.cuh",
        "reduce_kernel_utils.cuh",
    ],
    deps = [
        "//tinfer/log",
        "//tinfer/utils:cuda_utils",
    ],
)

cuda_library(
    name = "matrix_vector_multiplication",
    srcs = ["matrix_vector_multiplication.cu"],
    hdrs = [
        "matrix_vector_multiplication.h",
    ],
    deps = [
        ":kernel_utils",
    ],
)

cuda_library(
    name = "transpose_int8_kernels",
    srcs = ["transpose_int8_kernels.cu"],
    hdrs = [
        "transpose_int8_kernels.h",
    ],
    deps = [
        ":kernel_utils",
        "//tinfer/tensor",
    ],
)
