load("@rules_cuda//cuda:defs.bzl", "cuda_library")
load(
    "//tinfer:copts/configure_copts.bzl",
    "TINFER_DEFAULT_CUDA_COPTS",
)

package(
    default_visibility = ["//visibility:public"],
)

cuda_library(
    name = "cutlass_kernels",
    srcs = glob([
        "**/*.cu",
    ]),
    hdrs = glob([
        "**/*.h",
        "**/*.hpp",
    ]),
    copts = TINFER_DEFAULT_CUDA_COPTS,
    deps = [
        "//tinfer/kernel/cutlass_extensions",
        "//tinfer/log",
        "//tinfer/utils:activation_types",
        "//tinfer/utils:cuda_allocator",
        "//tinfer/utils:cuda_utils",
    ],
)
