load(
    "//tinfer:copts/configure_copts.bzl",
    "TINFER_DEFAULT_COPTS",
)

package(
    default_visibility = ["//visibility:public"],
)

cc_library(
    name = "base_layer",
    hdrs = [
        "base_layer.h",
    ],
    copts = TINFER_DEFAULT_COPTS,
    deps = [
        "//tinfer/tensor",
        "//tinfer/utils:cublas_wrapper",
        "//tinfer/utils:cuda_allocator",
    ],
)

cc_library(
    name = "dense_weight",
    hdrs = [
        "dense_weight.h",
    ],
    copts = TINFER_DEFAULT_COPTS,
)
